--- a/package.json
+++ b/package.json
@@ -7,17 +7,15 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "analyzer": "cross-env use_analyzer=true vite build",
-    "publish": "vue-tsc && node bin/updateVersion.cjs && vite build && npm run publish"
+    "publish": "vue-tsc && node bin/updateVersion.cjs && vite build && node bin/publish.cjs"
   },
   "dependencies": {
-    "prismjs": "^1.29.0",
     "sass": "^1.75.0",
     "vue": "^3.4.21",
     "vue-checkbox-count": "^1.0.9"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
-    "@types/prismjs": "^1.26.4",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
@@ -25,7 +23,6 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-dts": "^3.9.1",
-    "vite-plugin-prismjs": "^0.0.11",
     "vite-plugin-vue-devtools": "^7.1.2",
     "vue-tsc": "^2.0.6"
   }
